--- a/arch/arm/configs/darksense_defconfig
+++ b/arch/arm/configs/darksense_defconfig
@@ -40,7 +40,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-DarkSense-M7-r1.0-"
+CONFIG_LOCALVERSION="-DarkSense-M7-r2.0-"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -215,6 +215,9 @@ CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_ROW=y
 # CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_NOOP is not set
@@ -436,6 +439,8 @@ CONFIG_USERSPACE_VOLTAGE_CONTROL=y
 CONFIG_FORCE_FAST_CHARGE=y
 # CONFIG_MSM_DALRPC is not set
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
+CONFIG_MSM_SLEEPER=y
+# CONFIG_CPU_VOLTAGE_TABLE is not set
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
 CONFIG_AMSS_7X25_VERSION_2009=y
@@ -719,8 +724,8 @@ CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-# CONFIG_CPU_FREQ_GOV_ONDEMAND_2_PHASE is not set
-CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND_2_PHASE=y
+# CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 CONFIG_CPU_FREQ_GOV_WHEATLEY=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
@@ -2469,6 +2474,7 @@ CONFIG_MSM_KGSL_MMU_PAGE_FAULT=y
 CONFIG_MSM_KGSL_PAGE_TABLE_SIZE_FOR_IOMMU=0x1FE00000
 CONFIG_MSM_KGSL_KILL_HANG_PROCESS=y
 # CONFIG_MSM_KGSL_GPU_USAGE is not set
+CONFIG_MSM_KGSL_SIMPLE_GOV=y
 # CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
 CONFIG_FB=y
