Enabled the kernel stuff

--- a/arch/arm/configs/M7-GE_defconfig
+++ b/arch/arm/configs/M7-GE_defconfig
@@ -1,4 +1,4 @@
-#
+s#
 # Automatically generated file; DO NOT EDIT.
 # Linux/arm 3.4.10 Kernel Configuration
 #
@@ -1710,7 +1710,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_FT5X06 is not set
 CONFIG_TOUCHSCREEN_SYNAPTICS_3K=y
 # CONFIG_TOUCHSCREEN_MAX11871 is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_SWEEP2WAKE is not set
+CONFIG_TOUCHSCREEN_SYNAPTICS_SWEEP2WAKE=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
@@ -2490,8 +2490,8 @@ CONFIG_MSM_KGSL_PAGE_TABLE_COUNT=24
 CONFIG_MSM_KGSL_MMU_PAGE_FAULT=y
 # CONFIG_MSM_KGSL_DISABLE_SHADOW_WRITES is not set
 CONFIG_MSM_KGSL_KILL_HANG_PROCESS=y
-# CONFIG_MSM_KGSL_GPU_USAGE is not set
-# CONFIG_MSM_KGSL_SIMPLE_GOV is not set
+CONFIG_MSM_KGSL_GPU_USAGE=y
+CONFIG_MSM_KGSL_SIMPLE_GOV=y
 # CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
 CONFIG_FB=y
@@ -3475,8 +3475,7 @@ CONFIG_NLS_ISO8859_1=y
 # CONFIG_NLS_UTF8 is not set
 # CONFIG_EXFAT_FS is not set
 CONFIG_FSYNC_DEBUG="n"
-# CONFIG_RESTRICT_ROOTFS_SLAVE is not set
-
+CONFIG_RESTRICT_ROOTFS_SLAVE=y
 #
 # Kernel hacking
 #
