update config to version r1.2

--- a/arch/arm/configs/M7-GE_defconfig
+++ b/arch/arm/configs/M7-GE_defconfig
@@ -1,4 +1,4 @@
-s#
+#
 # Automatically generated file; DO NOT EDIT.
 # Linux/arm 3.4.10 Kernel Configuration
 #
@@ -40,16 +40,16 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-JMB-M7-GE-r1.1"
+CONFIG_LOCALVERSION="-JMB-M7-GE-r1.2"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_XZ=y
 CONFIG_HAVE_KERNEL_LZO=y
 # CONFIG_KERNEL_GZIP is not set
-# CONFIG_KERNEL_LZMA is not set
+CONFIG_KERNEL_LZMA=y
 # CONFIG_KERNEL_XZ is not set
-CONFIG_KERNEL_LZO=y
+# CONFIG_KERNEL_LZO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 # CONFIG_SYSVIPC is not set
@@ -443,7 +443,7 @@ CONFIG_FORCE_FAST_CHARGE=y
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
 CONFIG_MSM_SLEEPER=y
 CONFIG_CPU_VOLTAGE_TABLE=y
-CONFIG_MSM_AVS_HW=y
+# CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
 CONFIG_AMSS_7X25_VERSION_2009=y
 # CONFIG_AMSS_7X25_VERSION_2008 is not set
@@ -3476,6 +3476,7 @@ CONFIG_NLS_ISO8859_1=y
 # CONFIG_EXFAT_FS is not set
 CONFIG_FSYNC_DEBUG="n"
 CONFIG_RESTRICT_ROOTFS_SLAVE=y
+
 #
 # Kernel hacking
 #
